--- a/app/src/main/res/layout/activity_comidas.xml
+++ b/app/src/main/res/layout/activity_comidas.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.ComidasActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contentCategorias"
+        android:id="@+id/contentComidas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
